syntax = "proto3";

import "schema.proto";

message Chunk {
  oneof chunk_type {
    Metadata metadata = 2;
    Directory directory = 3;
    RowDataNode row_data = 4;
  }
}

message Metadata {
  uint32 next_chunk_id = 1;
  uint32 next_chunk_offset = 2;
  IndexSchema schema = 3;
  uint32 root_chunk_id = 4;
  uint32 num_directories = 5;
}

message Directory {
  // NOTE: use fixed32 so updating the offset of an existing entry
  // won't cause the directory to suddenly exceed the chunk size.
  // TODO: play with other options.
  message Entry {
    fixed32 id = 1;
    fixed32 offset = 2;
  }
  repeated Entry entries = 1;
}

message RowDataNode {
  uint32 id = 1;
  message Value {
    oneof node_type {
      InternalRow row_node = 1;
      uint32 child_id = 2;
    }
  }
  repeated Value values = 2;
}

message InternalRow {
  string key = 1;
  repeated InternalColumn col_values = 2;
}

message InternalColumn {
  oneof value {
    bool is_empty = 1;
    int32 int_value = 2;
  }
}
